//
// Created by red on 10.05.22.
//

#ifndef REWORKED_GAME_H
#define REWORKED_GAME_H


class Game {
public:
    void start();
};


#endif //REWORKED_GAME_H
